Fixes #30412 - fix shifted react-container

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -11,17 +11,6 @@ body {
   display: table-cell;
 }
 
-.react-container {
-  margin-right: auto;
-  margin-left: 200px;
-  padding-left: 20px;
-  padding-right: 20px;
-
-  &.collapsed-nav {
-    margin-left: 75px;
-  }
-}
-
 .base li {
   list-style: none;
   margin-left: 20px;
